@@ -466,18 +466,41 @@ int			global_nCmdShow;
 HWND		hwnd_dialog;
 #endif	/* NO_SPLASHES */
 static char	*argv[MAX_NUM_ARGVS];
-static char	empty_string[] = "";
 static char	cwd[1024];
+static char	prog[MAX_PATH];
 static quakeparms_t	parms;
+
+static void Sys_CreateInitSplash (HINSTANCE hInstance)
+{
+#if !defined(NO_SPLASHES)
+	RECT		rect;
+
+	hwnd_dialog = CreateDialog(hInstance, MAKEINTRESOURCE(IDD_DIALOG1), NULL, NULL);
+	if (!hwnd_dialog)
+		return;
+
+	if (GetWindowRect (hwnd_dialog, &rect))
+	{
+		if (rect.left > (rect.top * 2))
+		{
+			SetWindowPos (hwnd_dialog, 0,
+					(rect.left / 2) - ((rect.right - rect.left) / 2),
+					rect.top, 0, 0,
+					SWP_NOZORDER | SWP_NOSIZE);
+		}
+	}
+
+	ShowWindow (hwnd_dialog, SW_SHOWDEFAULT);
+	UpdateWindow (hwnd_dialog);
+	SetForegroundWindow (hwnd_dialog);
+#endif	/* NO_SPLASHES */
+}
 
 int WINAPI WinMain (HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine, int nCmdShow)
 {
 	int		i;
 	double		time, oldtime, newtime;
 	MEMORYSTATUS	lpBuffer;
-#if !defined(NO_SPLASHES)
-	RECT		rect;
-#endif	/* NO_SPLASHES */
 
 	/* previous instances do not exist in Win32 */
 	if (hPrevInstance)
@@ -503,7 +526,10 @@ int WINAPI WinMain (HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLin
 	parms.userdir = cwd;	/* no userdir on win32 */
 
 	parms.argc = 1;
-	argv[0] = empty_string;
+	argv[0] = prog;
+	if (GetModuleFileName(NULL, prog, sizeof(prog)) == 0)
+		prog[0] = '\0';
+	else	prog[MAX_PATH - 1] = '\0';
 
 	while (*lpCmdLine && (parms.argc < MAX_NUM_ARGVS))
 	{
@@ -536,27 +562,7 @@ int WINAPI WinMain (HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLin
 
 	COM_ValidateByteorder ();
 
-#if !defined(NO_SPLASHES)
-	hwnd_dialog = CreateDialog(hInstance, MAKEINTRESOURCE(IDD_DIALOG1), NULL, NULL);
-
-	if (hwnd_dialog)
-	{
-		if (GetWindowRect (hwnd_dialog, &rect))
-		{
-			if (rect.left > (rect.top * 2))
-			{
-				SetWindowPos (hwnd_dialog, 0,
-					(rect.left / 2) - ((rect.right - rect.left) / 2),
-					rect.top, 0, 0,
-					SWP_NOZORDER | SWP_NOSIZE);
-			}
-		}
-
-		ShowWindow (hwnd_dialog, SW_SHOWDEFAULT);
-		UpdateWindow (hwnd_dialog);
-		SetForegroundWindow (hwnd_dialog);
-	}
-#endif	/* NO_SPLASHES */
+	Sys_CreateInitSplash (global_hInstance);
 
 // take the greater of all the available memory or half the total memory,
 // but at least 16 Mb and no more than 32 Mb, unless they explicitly
@@ -589,9 +595,6 @@ int WINAPI WinMain (HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLin
 		Sys_Error ("Insufficient memory.\n");
 
 	Sys_Init ();
-
-// because sound is off until we become active
-	S_BlockSound ();
 
 	Host_Init();
 
